several small changes.