@@ -17,25 +17,24 @@ import android.util.Log;
 import de.uvwxy.footpath.Rev;
 
 /**
- * Interface to log compass, accelerometer, GPS, WiFi and route
- * Use startLogging() to register file writers and GPS/WiFi interfaces
- * Use log[..](params) from class using the DataLogger interface
- * GPS/WiFi Logging will be handled in this object
- * Use stopLogging() to close everything mentioned above
+ * Interface to log compass, accelerometer, GPS, WiFi and route Use startLogging() to register file writers and GPS/WiFi
+ * interfaces Use log[..](params) from class using the DataLogger interface GPS/WiFi Logging will be handled in this
+ * object Use stopLogging() to close everything mentioned above
+ * 
  * @author Paul Smith
- *
+ * 
  */
 public class DataLogger {
 	// Objects to work with
 	private long routeID;
-	private String from;
-	private String to;
-				
+	private final String from;
+	private final String to;
+
 	private boolean started = false;
-	private boolean accOpen = false;				// To check if files have been opened successfully
+	private boolean accOpen = false; // To check if files have been opened successfully
 	private boolean compOpen = false;
-	
-	private FWriter fwCompass;						// Log data to /sdcard/routelog/
+
+	private FWriter fwCompass; // Log data to /sdcard/routelog/
 	private FWriter fwAccelerometer;
 	private FWriter fwVariance;
 	private FWriter fwPosition;
@@ -48,45 +47,45 @@ public class DataLogger {
 	private FWriter fwSimpleRoute;
 	private FWriter fwInfo;
 	private LocationManager locationManager = null;
-	
+
 	private WifiManager wm01;
 	private WifiReceiver wr01;
 	private List<ScanResult> lScanResult;
-	
-	private Context context;
-	
+
+	private final Context context;
+
 	/*
 	 * Handles writing of GPS data.
 	 */
 	LocationListener locationListener = new LocationListener() {
 		@Override
 		public void onLocationChanged(Location location) {
-				try {
-					fwGPS.openFileOnCard();
-					fwGPS.appendLineToFile(""
-						+ System.currentTimeMillis() + ","
-						+ location.getLatitude() + ","
+			try {
+				fwGPS.openFileOnCard();
+				fwGPS.appendLineToFile("" + System.currentTimeMillis() + "," + location.getLatitude() + ","
 						+ location.getLongitude());
-					fwGPS.closeFileOnCard();
-				} catch (FileNotFoundException e) {
-					e.printStackTrace();
-				}
+				fwGPS.closeFileOnCard();
+			} catch (FileNotFoundException e) {
+				e.printStackTrace();
+			}
 		}
+
 		@Override
 		public void onStatusChanged(String provider, int status, Bundle extras) {
 		}
+
 		@Override
 		public void onProviderEnabled(String provider) {
 		}
+
 		@Override
 		public void onProviderDisabled(String provider) {
 		}
 
 	};
-	
+
 	/**
-	 * A class that receives the scan results of a WiFi scan. After each scan a
-	 * new scan is started.
+	 * A class that receives the scan results of a WiFi scan. After each scan a new scan is started.
 	 * 
 	 * @author Paul
 	 * 
@@ -104,21 +103,19 @@ public class DataLogger {
 			lScanResult = wm01.getScanResults();
 			boolean retry = true;
 			int tries = 0;
-			while(retry && tries < 3){
+			while (retry && tries < 3) {
 				try {
 					fwWifi.openFileOnCard();
-					fwWifi.appendLineToFile("Time passed (ms): "
-							+ (System.currentTimeMillis()));					
+					fwWifi.appendLineToFile("Time passed (ms): " + (System.currentTimeMillis()));
 					retry = false;
 				} catch (FileNotFoundException e) {
 					tries++;
 				}
-			}			
+			}
 			// retry was set to false, can log data
-			if(!retry){
+			if (!retry) {
 				for (int i = 0; i < lScanResult.size(); i++) {
-					fwWifi.appendLineToFile((new Integer(i + 1).toString()
-							+ "." + lScanResult.get(i)).toString());
+					fwWifi.appendLineToFile((Integer.valueOf(i + 1).toString() + "." + lScanResult.get(i)).toString());
 				}
 				fwWifi.closeFileOnCard();
 			}
@@ -126,27 +123,28 @@ public class DataLogger {
 			wmLocal.startScan();
 		}
 	}
-	
-	public DataLogger(Context context, long routeID, String from, String to){
+
+	public DataLogger(Context context, long routeID, String from, String to) {
 		this.routeID = routeID;
 		this.from = from;
 		this.to = to;
 		this.context = context;
 		locationManager = (LocationManager) context.getSystemService(Context.LOCATION_SERVICE);
 	}
-	
-	public void logTimedCompass(long timestamp, double value){
+
+	public void logTimedCompass(long timestamp, double value) {
 		writeTofwObject(fwCompass, "" + timestamp + ", " + value);
 	}
-	public void logTimedVariance(long timestamp, double value){
+
+	public void logTimedVariance(long timestamp, double value) {
 		writeTofwObject(fwVariance, "" + timestamp + ", " + value);
 	}
-	
-	public void logRawCompass(long timestamp, double x, double y, double z){
-		if(!compOpen){
+
+	public void logRawCompass(long timestamp, double x, double y, double z) {
+		if (!compOpen) {
 			boolean retry = true;
 			int tries = 0;
-			while(retry && tries < 3){
+			while (retry && tries < 3) {
 				try {
 					fwRawCompass.openFileOnCard();
 					retry = false;
@@ -156,20 +154,20 @@ public class DataLogger {
 				}
 			}
 		}
-		if(compOpen){
+		if (compOpen) {
 			fwRawCompass.appendLineToFile("" + timestamp + ", " + x + ", " + y + ", " + z);
 		}
 	}
-	
-	public void logTimedAcc(long timestamp, double value){
+
+	public void logTimedAcc(long timestamp, double value) {
 		writeTofwObject(fwAccelerometer, "" + timestamp + ", " + value);
 	}
-	
-	public void logRawAcc(long timestamp, double x, double y, double z){
-		if(!accOpen){
+
+	public void logRawAcc(long timestamp, double x, double y, double z) {
+		if (!accOpen) {
 			boolean retry = true;
 			int tries = 0;
-			while(retry && tries < 3){
+			while (retry && tries < 3) {
 				try {
 					fwRawAccel.openFileOnCard();
 					retry = false;
@@ -179,46 +177,47 @@ public class DataLogger {
 				}
 			}
 		}
-		if(accOpen){
+		if (accOpen) {
 			fwRawAccel.appendLineToFile("" + timestamp + ", " + x + ", " + y + ", " + z);
 		}
 	}
-	
-	public void logPosition(long timestamp, double latBest, double lonBest, double progressBest,
-			double latFirst, double lonFirst, double progressFirst){
+
+	public void logPosition(long timestamp, double latBest, double lonBest, double progressBest, double latFirst,
+			double lonFirst, double progressFirst) {
 		// NOTE: progress is in [0,1]
-		writeTofwObject(fwPosition, "" + timestamp + ", " + latBest + ", " + lonBest + ", " + progressBest
-				+ latFirst + ", " + lonFirst + ", " + progressFirst);
+		writeTofwObject(fwPosition, "" + timestamp + ", " + latBest + ", " + lonBest + ", " + progressBest + latFirst
+				+ ", " + lonFirst + ", " + progressFirst);
 	}
-	
-	public void logRoute(double lat0, double lon0){
-		writeTofwObject(fwRoute, "" + lat0 + ", " + lon0);		
+
+	public void logRoute(double lat0, double lon0) {
+		writeTofwObject(fwRoute, "" + lat0 + ", " + lon0);
 	}
-	public void logSimpleRoute(double lat0, double lon0){
+
+	public void logSimpleRoute(double lat0, double lon0) {
 		writeTofwObject(fwSimpleRoute, "" + lat0 + ", " + lon0);
 	}
-	
-	public void logStep(long timestamp, double direction){
+
+	public void logStep(long timestamp, double direction) {
 		writeTofwObject(fwSteps, "" + timestamp + ", " + direction);
 	}
-	
-	public void logInfo(String s){
+
+	public void logInfo(String s) {
 		writeTofwObject(fwInfo, s);
 	}
-	
-	public boolean started(){
+
+	public boolean started() {
 		return started;
 	}
-	
-	public long getRouteId(){
+
+	public long getRouteId() {
 		return routeID;
 	}
-	
-	public void startLogging(){
+
+	public void startLogging() {
 		Log.i("FOOTPATH", "Starting Logging");
 		routeID = System.currentTimeMillis();
 		createFileObjects();
-		
+
 		try {
 			fwRawAccel.openFileOnCard();
 			accOpen = true;
@@ -226,32 +225,30 @@ public class DataLogger {
 			compOpen = true;
 		} catch (FileNotFoundException e) {
 			e.printStackTrace();
-		}	
-		
-		locationManager.requestLocationUpdates(LocationManager.GPS_PROVIDER, 0,
-				0, locationListener);
+		}
+
+		locationManager.requestLocationUpdates(LocationManager.GPS_PROVIDER, 0, 0, locationListener);
 		wm01 = (WifiManager) context.getSystemService(Context.WIFI_SERVICE);
 		wr01 = new WifiReceiver(wm01);
-		context.registerReceiver(wr01, new IntentFilter(
-				WifiManager.SCAN_RESULTS_AVAILABLE_ACTION));
+		context.registerReceiver(wr01, new IntentFilter(WifiManager.SCAN_RESULTS_AVAILABLE_ACTION));
 		Log.i("FOOTPATH", "Registered WifiReceiver");
 		wm01.startScan();
 		Log.i("FOOTPATH", "Started WiFi Scan");
 		started = true;
 	}
-	
-	public void stopLogging(){
+
+	public void stopLogging() {
 		started = false;
 		locationManager.removeUpdates(locationListener);
 		context.unregisterReceiver(wr01);
-		if(accOpen){
+		if (accOpen) {
 			fwRawAccel.closeFileOnCard();
 		}
-		if(compOpen){
+		if (compOpen) {
 			fwRawCompass.closeFileOnCard();
 		}
 	}
-	
+
 	private void createFileObjects() {
 		fwAccelerometer = new FWriter("" + routeID + "_" + from + "_" + to, "acc.csv");
 		fwCompass = new FWriter("" + routeID + "_" + from + "_" + to, "comp.csv");
@@ -264,20 +261,20 @@ public class DataLogger {
 		fwRawCompass = new FWriter("" + routeID + "_" + from + "_" + to, "rawcomp.csv");
 		fwRoute = new FWriter("" + routeID + "_" + from + "_" + to, "route.csv");
 		fwSimpleRoute = new FWriter("" + routeID + "_" + from + "_" + to, "simpleroute.csv");
-		fwInfo = new FWriter("" + routeID + "_" + from + "_" + to, "info(rev. " +  Rev.rev  + ").txt");
+		fwInfo = new FWriter("" + routeID + "_" + from + "_" + to, "info(rev. " + Rev.rev + ").txt");
 	}
-	
-	private void writeTofwObject(FWriter fw, String data){
+
+	private void writeTofwObject(FWriter fw, String data) {
 		boolean retry = true;
 		int tries = 0;
-		while(retry && tries < 3){
+		while (retry && tries < 3) {
 			try {
 				fw.openFileOnCard();
 				fw.appendLineToFile(data);
 				fw.closeFileOnCard();
 				retry = false;
 			} catch (FileNotFoundException e) {
-				//e.printStackTrace();
+				// e.printStackTrace();
 				tries++;
 			}
 		}
